--- a/simulare.html
+++ b/simulare.html
@@ -54,6 +54,8 @@
                                     <img src="assets/close.png">
                                 </div>
                                 <div class="img-wrapper"></div>
+                                <!-- mai trebuie lucrat aici, layout-ul oia putin razna, ti-am atasat si un screenshot sa vezi cum vad eu -->
+                                <!-- daca partea de Js ai sacrificat-o, pentru un eventual interviu partea asta trebuie sa fie perfecta -->
                                 <div class="overlay-product">
                                     <h3>Top Coat</h3>
                                     <h4>$60</h4>
